--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+
+###################################################################################################
+#DataBaseDetails
+spring.datasource.url=jdbc:mysql://localhost:3306/harighosh
+spring.datasource.username= root
+spring.datasource.password= root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
